[gd_scene load_steps=8 format=3 uid="uid://dx1ic8e4exr86"]

[ext_resource type="Script" path="res://scenes/ui/UI.gd" id="1_onnvg"]
[ext_resource type="Texture2D" uid="uid://bt22o018bjsuu" path="res://assets/images/page_template.png" id="2_88ewc"]
[ext_resource type="Texture2D" uid="uid://ctg4enhb3qais" path="res://assets/images/gauntletCursor/outlines/cursor_outline_yellow.png" id="3_eqyhu"]
[ext_resource type="AudioStream" uid="uid://deyxjil4sab1s" path="res://assets/audio/sound_effects/page-flip-01a.mp3" id="4_2mdbe"]

[sub_resource type="LabelSettings" id="LabelSettings_17whb"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_hiycv"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_hs1hk"]
font_size = 26

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.00012207
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_onnvg")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -11.5
offset_right = 45.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "read the note"
label_settings = SubResource("LabelSettings_17whb")

[node name="IntroTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="PageView" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PageView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.560784)

[node name="CenterContainer" type="CenterContainer" parent="PageView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PageView/CenterContainer"]
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_88ewc")

[node name="PageTitle" type="Label" parent="PageView"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -751.0
offset_top = 50.0
offset_right = 751.0
offset_bottom = 119.0
grow_horizontal = 2
text = "Page Title"
label_settings = SubResource("LabelSettings_hiycv")
horizontal_alignment = 1

[node name="PageText" type="Label" parent="PageView"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -730.0
offset_top = -356.0
offset_right = 769.0
offset_bottom = 383.0
grow_horizontal = 2
grow_vertical = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium, purus ac auctor pretium, est velit lacinia eros, non ullamcorper mauris eros ut magna. Suspendisse accumsan mauris quam, nec tristique lacus ullamcorper quis. Nunc vehicula vestibulum odio, nec vestibulum odio blandit eget. Phasellus convallis lectus sit amet urna malesuada scelerisque. Suspendisse libero elit, feugiat sit amet ullamcorper vel, feugiat eget augue. Donec ullamcorper purus nec vehicula congue. Quisque mattis dui in elementum facilisis. Sed venenatis tristique ipsum ut condimentum. Vivamus aliquet sodales est eget imperdiet. Aliquam metus neque, fringilla ut condimentum nec, dictum sed eros. Etiam hendrerit nunc et turpis pulvinar egestas. Cras id viverra mauris, sed imperdiet sapien. Nunc convallis cursus orci. Morbi non sem sed dui volutpat interdum. Nunc fermentum in nibh rutrum faucibus.

"
label_settings = SubResource("LabelSettings_hs1hk")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InteractHand" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("3_eqyhu")

[node name="PageFlip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2mdbe")
volume_db = -8.0

[connection signal="timeout" from="IntroTimer" to="." method="_on_intro_timer_timeout"]
